-For txt import, a text file can now contain a fourth column which will be
 mapped to the 'notes' field of a Vocabulary card.
-When editing or browsing cards, don't reset the state of the scheduler such
 that you need to press 'show answer' again or such that a new card appears
 (reported by Gnome).
-Correctly update flag 'hide pronunciation' in the popup menu (reported by
 Tom Cato Amundsen).
-Fix crash when converting multiple cards at the same time between e.g.
 Vocabulary card type and Map card type (reported by Gnome).
-Unless the 'Prefill tag behaviour' plugin is active, changing card types will
 never change the tag you already filled in, even if it's different from the
 last used tag (reported by Gnome).
-When changing the font for '<all card types>', make a more neutral choice
 for default font in case currently different card types have different
 fonts (reported by Gnome).
-Fix crash pressing the 'Delete' key in the 'Activate cards' dialog (reported
 by Gnome).
-In case you are not using saved sets and create a new tag whose parent is
 inactive, make the new tag inactive too. (If you have a saved set active,
 you'll get a dialog box asking whether you want to activate that tag or not,
 just like before) (reported by Gnome).
-Fix bug in interaction between Latex system and exporting to the 'cards'
 format (reported by Gwern).
-More tweaks for RTL languages like Arabic and Hebrew (bug report by
 Ansgar Bohmann).
-No more superfluous empty lines for cards with RTL languages.
-When changing languagues, translate the window title immediately, instead
 of after reboot.
-On a Thai system, don't use Thai numerals in the card browser if the language
 is set to English (request by Mark).
-Take time zone information into account when displaying creation date of
 card in browser.
-When renaming a saved set, prefill the name field with the previous name of
 the set.
-Don't reset selected plugin when importing a new plugin (reported by Gnome).